# Test

./: .gitignore  README.md
extract-unique-word/: package.json
log-monitoring/: .dmypy.json  .gitignore  Dockerfile  README.md  docker-compose.yml  docker.sh  main.py  pyproject.toml
log-monitoring/tests/: test_main.py
